Basic lightbox shows correct image
* Need to still figure out how to correctly display images that are of
 different aspect ratios. Wide images spill of side of page currently.

* Use translate(-50%, -50%) and top/left: 50% to center lightbox both
 horizontally and vertically.

--- a/index.css
+++ b/index.css
@@ -12,3 +12,31 @@
   opacity: 1.0;
 }
 
+.lightbox-background {
+  height: 100%;
+  width: 100%;
+  opacity: 0.6;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  z-index: 9;
+}
+
+.lightbox {
+  background: yellow;
+  position: absolute;
+  height: 80%;
+  width: auto;
+  display: none;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  z-index: 10;
+}
+
+.lightbox-image {
+  height: 100%;
+}
